* eval_intern.h, vm.c, vm_eval.c, vm_insnhelper.c:   change throw mechanism (not save target ep, but save target cfp).   It fixes `unexpected break' bug that occurs when   TracePoint#binding is called.   [ruby-dev:48797] [Bug #10689]

* test/ruby/test_settracefunc.rb: add a test.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@49266 b2dd03c8-39d4-4d8f-98ff-823fe69b080e